修改成markdown编辑器

--- a/application/admin/view/blog/article/form.html
+++ b/application/admin/view/blog/article/form.html
@@ -150,7 +150,7 @@
             saveHTMLToTextarea : true,
             imageUpload    : true,
             imageFormats   : ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
-            imageUploadURL : "{:url('@admin/api.upload/oneImage')}"
+            imageUploadURL : "{:url('@admin/api.upload/image')}"
         });
 
 
