--- a/application/blog/view/public/basic.html
+++ b/application/blog/view/public/basic.html
@@ -9,8 +9,8 @@
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <meta name="keywords" content="{$keywords|default='99PHP社区'}">
     <meta name="description" content="{$description|default='99PHP博客网站'}。">
-    <LINK rel="Bookmark" href="favicon.ico">
-    <LINK rel="Shortcut Icon" href="favicon.ico"/>
+    <LINK rel="Bookmark" href="/favicon.ico">
+    <LINK rel="Shortcut Icon" href="/favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="__STATIC__/plugs/blog/h-ui/css/H-ui.min.css"/>
     <link rel="stylesheet" type="text/css" href="__STATIC__/plugs/blog/Hui-iconfont/1.0.8/iconfont.min.css"/>
     <link rel="stylesheet" type="text/css" href="__STATIC__/css/blog/common.css"/>
