--- a/application/admin/view/login/index.html
+++ b/application/admin/view/login/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <!--判断是否开启验证码登录-->
-            <!--{if $SysInfo.VercodeType == 1}-->
+            {if $SysInfo.VercodeType == 1}
             <div class="layui-form-item">
                 <div class="layui-row">
                     <div class="layui-col-xs7">
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </div>
-            <!--{/if}-->
+            {/if}
 
             <div class="layui-form-item" style="margin-bottom: 20px;">
                 <input type="checkbox" name="remember" lay-skin="primary" title="记住密码">
@@ -49,14 +49,14 @@
                 <button class="layui-btn layui-btn-fluid" id="submitBtn">登 入</button>
 
             </div>
-            <div class="layui-trans layui-form-item layadmin-user-login-other">
-                <label>社交账号登入</label>
-                <a href="javascript:;"><i class="layui-icon layui-icon-login-qq"></i></a>
-                <a href="javascript:;"><i class="layui-icon layui-icon-login-wechat"></i></a>
-                <a href="javascript:;"><i class="layui-icon layui-icon-login-weibo"></i></a>
+            <!--<div class="layui-trans layui-form-item layadmin-user-login-other">-->
+                <!--<label>社交账号登入</label>-->
+                <!--<a href="javascript:;"><i class="layui-icon layui-icon-login-qq"></i></a>-->
+                <!--<a href="javascript:;"><i class="layui-icon layui-icon-login-wechat"></i></a>-->
+                <!--<a href="javascript:;"><i class="layui-icon layui-icon-login-weibo"></i></a>-->
 
-                <a href="reg.html" class="layadmin-user-jump-change layadmin-link">注册帐号</a>
-            </div>
+                <!--<a href="reg.html" class="layadmin-user-jump-change layadmin-link">注册帐号</a>-->
+            <!--</div>-->
         </div>
     </div>
 
@@ -64,7 +64,7 @@
 
         <p>{$SysInfo.FooterName|default=''} - <a href="{$SysInfo.BeianUrl|default=''}" target="_blank">{$SysInfo.Beian|default=''}</a></p>
         <p>
-            <span><a href="{$SysInfo.HomeUrl|default=''}" target="_blank">前往久久PHP社区</a></span>
+            <span><a href="{$SysInfo.HomeUrl|default=''}" target="_blank">前往博客首页</a></span>
         </p>
     </div>
 </div>
@@ -81,10 +81,18 @@
      * 登录
      */
     $("#submitBtn").click(function () {
+        if($("#username").val() == '') {
+            $.msg.error('用户名不能为空');
+            return false;
+        }
+        if($("#password").val() == '') {
+            $.msg.error('密码不能为空');
+            return false;
+        }
         var data = {
             username: $("#username").val(),
             password: $("#password").val(),
-            vercode: $("#vercode").val(),
+            vercode: $("#vercode").val()
         };
         $.request.post("{:url('@admin/login')}", data, function (res) {
             $.msg.success(res.msg, function () {
